// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`createRateLimitDirective limits a field 1`] = `
Object {
  "data": Object {
    "quote": "The future is something which everyone reaches at the rate of sixty minutes an hour, whatever he does, whoever he is. ― C.S. Lewis",
  },
}
`;

exports[`createRateLimitDirective limits a repeated field 1`] = `
Object {
  "data": Object {
    "books": Array [
      Object {
        "title": "A Game of Thrones",
      },
      Object {
        "title": "The Hobbit",
      },
    ],
  },
}
`;

exports[`createRateLimitDirective limits an object 1`] = `
Object {
  "data": Object {
    "books": Array [
      Object {
        "title": "A Game of Thrones",
      },
      Object {
        "title": "The Hobbit",
      },
    ],
    "quote": "The future is something which everyone reaches at the rate of sixty minutes an hour, whatever he does, whoever he is. ― C.S. Lewis",
  },
}
`;

exports[`createRateLimitDirective raises limiter error 1`] = `
Object {
  "data": Object {
    "quote": null,
  },
  "errors": Array [
    [GraphQLError: Some error happened],
  ],
}
`;

exports[`createRateLimitDirective respects custom key generator 1`] = `
Object {
  "data": Object {
    "quote": "The future is something which everyone reaches at the rate of sixty minutes an hour, whatever he does, whoever he is. ― C.S. Lewis",
  },
}
`;

exports[`createRateLimitDirective respects custom throttle 1`] = `
Object {
  "data": Object {
    "quote": "So comes snow after fire, and even dragons have their endings. ― Bilbo Baggins",
  },
}
`;

exports[`createRateLimitDirective throttles on limit reached 1`] = `
Object {
  "data": Object {
    "firstQuote": "The future is something which everyone reaches at the rate of sixty minutes an hour, whatever he does, whoever he is. ― C.S. Lewis",
    "secondQuote": null,
  },
  "errors": Array [
    [GraphQLError: Too many requests, please try again in 1 seconds.],
  ],
}
`;

exports[`createRateLimitTypeDef creates custom directive definition 1`] = `
Object {
  "definitions": Array [
    Object {
      "arguments": Array [
        Object {
          "defaultValue": Object {
            "kind": "IntValue",
            "value": "60",
          },
          "description": Object {
            "block": true,
            "kind": "StringValue",
            "value": "Number of occurrences allowed over duration.",
          },
          "directives": Array [],
          "kind": "InputValueDefinition",
          "name": Object {
            "kind": "Name",
            "value": "limit",
          },
          "type": Object {
            "kind": "NamedType",
            "name": Object {
              "kind": "Name",
              "value": "Int",
            },
          },
        },
        Object {
          "defaultValue": Object {
            "kind": "IntValue",
            "value": "60",
          },
          "description": Object {
            "block": true,
            "kind": "StringValue",
            "value": "Number of seconds before limit is reset.",
          },
          "directives": Array [],
          "kind": "InputValueDefinition",
          "name": Object {
            "kind": "Name",
            "value": "duration",
          },
          "type": Object {
            "kind": "NamedType",
            "name": Object {
              "kind": "Name",
              "value": "Int",
            },
          },
        },
      ],
      "description": Object {
        "block": true,
        "kind": "StringValue",
        "value": "Controls the rate of traffic.",
      },
      "kind": "DirectiveDefinition",
      "locations": Array [
        Object {
          "kind": "Name",
          "value": "OBJECT",
        },
        Object {
          "kind": "Name",
          "value": "FIELD_DEFINITION",
        },
      ],
      "name": Object {
        "kind": "Name",
        "value": "customRateLimit",
      },
    },
  ],
  "kind": "Document",
  "loc": Object {
    "end": 278,
    "start": 0,
  },
}
`;
